parser/vlg-parser-with-conflict.py
from ast import operator
from asyncio import constants
import sys
sys.path.append("/data/wenjifang/vlg-parser")
from ply.lex import TOKEN, lex
from ply.yacc import yacc

# --- Tokenizer

# All tokens must be named in advance.
# consts = ('INTNUM_DEC')
# # identifiers = ('REG', 'WIRE')
# parentheses = ('LPAREN', 'RPAREN')
# operators = ('BAND', 'BOR', 'BNOT', 'AND', 'OR', 'NOT')
# tokens = consts + parentheses + operators +()
tokens = ('INTNUM_BIN', 'INTNUM_OCT', 'INTNUM_DEC', 'INTNUM_HEX', \
            'SIGNED_INTNUM_BIN', 'SIGNED_INTNUM_OCT', 'SIGNED_INTNUM_DEC', 'SIGNED_INTNUM_HEX', \
            'LPAREN', 'RPAREN', \
            'MUL', 'DIV', 'ADD', 'SUB', \
            'BAND', 'BOR', 'BNOT', 'AND', 'OR', 'NOT', \
            'ID' \
         )
#===================== priority ==========================
# !/~ --> & --> | --> && --> ||

# Ignored characters
t_ignore = ' \t'

# Token matching rules are written as regexs
# t_PLUS = r'\+'
# t_MINUS = r'-'
# t_TIMES = r'\*'
# t_DIVIDE = r'/'
t_LPAREN = r'\('
t_RPAREN = r'\)'

t_MUL = r'\*'
t_DIV = r'\/'
t_ADD = r'\+'
t_SUB = r'\-'
t_BAND = r'\&'
t_BOR = r'\|'
t_BNOT = r'\~'
t_AND = r'\&\&'
t_OR = r'\|\|'
t_NOT = r'\!' 
# t_NAME = r'[a-zA-Z_][a-zA-Z0-9_]*'

bin_number = '[0-9]*\'[bB][0-1xXzZ?][0-1xXzZ?_]*'
signed_bin_number = '[0-9]*\'[sS][bB][0-1xZzZ?][0-1xXzZ?_]*'
octal_number = '[0-9]*\'[oO][0-7xXzZ?][0-7xXzZ?_]*'
signed_octal_number = '[0-9]*\'[sS][oO][0-7xXzZ?][0-7xXzZ?_]*'
decimal_number = '([0-9]*\'[dD][0-9xXzZ?][0-9xXzZ?_]*)|([0-9][0-9_]*)'
signed_decimal_number = '[0-9]*\'[sS][dD][0-9xXzZ?][0-9xXzZ?_]*'
hex_number = '[0-9]*\'[hH][0-9a-fA-FxXzZ?][0-9a-fA-FxXzZ?_]*'
signed_hex_number = '[0-9]*\'[sS][hH][0-9a-fA-FxXzZ?][0-9a-fA-FxXzZ?_]*'


# exponent_part = r"""([eE][-+]?[0-9]+)"""
# fractional_constant = r"""([0-9]*\.[0-9]+)|([0-9]+\.)"""
# float_number = '((((' + fractional_constant + ')' + \
#     exponent_part + '?)|([0-9]+' + exponent_part + ')))'

# simple_escape = r"""([a-zA-Z\\?'"])"""
# octal_escape = r"""([0-7]{1,3})"""
# hex_escape = r"""(x[0-9a-fA-F]+)"""
# escape_sequence = r"""(\\(""" + simple_escape + '|' + octal_escape + '|' + hex_escape + '))'
# string_char = r"""([^"\\\n]|""" + escape_sequence + ')'
# string_literal = '"' + string_char + '*"'

t_ID = r'(([a-zA-Z_])([a-zA-Z_0-9$])*)|((\\\S)(\S)*)'

@TOKEN(bin_number)
def t_INTNUM_BIN(t):
    return t

@TOKEN(octal_number)
def t_INTNUM_OCT(t):
    return t

@TOKEN(decimal_number)
def t_INTNUM_DEC(t):
    return t

@TOKEN(hex_number)
def t_INTNUM_HEX(t):
    return t

@TOKEN(signed_bin_number)
def t_SIGNED_INTNUM_BIN(t):
    return t

@TOKEN(signed_octal_number)
def t_SIGNED_INTNUM_OCT(t):
    return t

@TOKEN(signed_decimal_number)
def t_SIGNED_INTNUM_DEC(t):
    return t

@TOKEN(signed_hex_number)
def t_SIGNED_INTNUM_HEX(t):
    return t
# A function can be used if there is an associated action.
# Write the matching regex in the docstring.
# def t_NUMBER(t):
#     r'\d+'
#     t.value = int(t.value)
#     return t

# Ignored token with an action associated with it
def t_ignore_newline(t):
    r'\n+'
    t.lexer.lineno += t.value.count('\n')

# Error handler for illegal characters
def t_error(t):
    print(f'Illegal character {t.value[0]!r}')
    t.lexer.skip(1)

# Build the lexer object
lexer = lex(debug=False)
    
# ---------------- Parser -----------------
precedence = (
        # <- Weak
        ('left', 'OR'),
        ('left', 'AND'),
        ('left', 'BOR'),
        ('left', 'BAND'),
        # ('left', 'EQ', 'NE', 'EQL', 'NEL'),
        # ('left', 'LT', 'GT', 'LE', 'GE'),
        # ('left', 'LSHIFT', 'RSHIFT', 'LSHIFTA', 'RSHIFTA'),
        ('left', 'ADD', 'SUB'),
        ('left', 'MUL', 'DIV'),
        # ('left', 'POWER'),
        ('right', 'NOT', 'BNOT'),
        # -> Strong
    )

# Write functions for each grammar rule which is
# specified in the docstring.
def p_expression_mul(p):
    '''
    expression : term MUL term
    '''
    p[0] = ('mul', p[1], p[3])

def p_expression_div(p):
    '''
    expression : term DIV term
    '''
    p[0] = ('div', p[1], p[3])

def p_expression_add(p):
    '''
    expression : term ADD term
    '''
    p[0] = ('add', p[1], p[3])

def p_expression_sub(p):
    '''
    expression : term SUB term
    '''
    p[0] = ('sub', p[1], p[3])

def p_expression_or(p):
    '''
    expression : term OR term
    '''
    # p[0] = ('or',  p[2],  p[1], p[3])
    p[0] = ('or', p[1], p[3])

def p_expression_and(p):
    '''
    expression : term AND term
    '''
    # p[0] = ('and',  p[2],  p[1], p[3])
    p[0] = ('and', p[1], p[3])


def p_expression_bor(p):
    '''
    expression : term BOR term
    '''
    # p[0] = ('bor',  p[2],  p[1], p[3])
    p[0] = ('bor', p[1], p[3])


def p_expression_band(p):
    '''
    expression : term BAND term
    '''
    # p[0] = ('band',  p[2],  p[1], p[3])
    p[0] = ('band', p[1], p[3])


def p_expression_term(p):
    '''
    expression : term
    '''
    p[0] = p[1]

def p_term_mul(p):
    '''
    term : factor MUL factor
    '''
    p[0] = ('mul', p[1], p[3])

def p_term_div(p):
    '''
    term : factor DIV factor
    '''
    p[0] = ('div', p[1], p[3])

def p_term_add(p):
    '''
    term : factor ADD factor
    '''
    p[0] = ('add', p[1], p[3])

def p_term_sub(p):
    '''
    term : factor SUB factor
    '''
    p[0] = ('sub', p[1], p[3])

def p_term_or(p):
    '''
    term : factor OR factor
    '''
    # p[0] = ('or',  p[2],  p[1], p[3])
    p[0] = ('or', p[1], p[3])


def p_term_and(p):
    '''
    term : factor AND factor
    '''
    # p[0] = ('and',  p[2],  p[1], p[3])
    p[0] = ('and', p[1], p[3])


def p_term_bor(p):
    '''
    term : factor BOR factor
    '''
    # p[0] = ('bor',  p[2],  p[1], p[3])
    p[0] = ('bor', p[1], p[3])


def p_term_band(p):
    '''
    term : factor BAND factor
    '''
    # p[0] = ('band',  p[2],  p[1], p[3])
    p[0] = ('band', p[1], p[3])


def p_term_factor(p):
    '''
    term : factor
    '''
    p[0] = p[1]

def p_factor_not(p):
    '''
    factor : NOT factor
    '''
    p[0] = ('not', p[2])

def p_factor_bnot(p):
    '''
    factor : BNOT factor
    '''
    p[0] = ('bnot', p[2])

def p_factor_grouped(p):
    '''
    factor : LPAREN expression RPAREN
    '''
    # p[0] = ('grouped', p[2])
    p[0] = p[2]

def p_factor_id(p):
    '''
    factor : ID
    '''
    # p[0] = ('id', p[1])
    p[0] = p[1]
def p_factor_const(p):
    '''
    factor : const_expression
    '''
    p[0] = p[1]
def p_const_expression_intnum(p):
    '''
    const_expression : intnumber
    '''
    # p[0] = ('intconst', p[1])
    p[0] = p[1]
def p_intnumber(p):
    '''
    intnumber : INTNUM_BIN
    | INTNUM_OCT
    | INTNUM_DEC
    | INTNUM_HEX
    | SIGNED_INTNUM_BIN
    | SIGNED_INTNUM_OCT
    | SIGNED_INTNUM_DEC
    | SIGNED_INTNUM_HEX
    '''
    p[0] = p[1]



def p_error(p):
    print(f'Syntax error at {p.value!r}')

# Build the parser
parser = yacc(debug=True)

# Parse an expression
expr_in = '(!(start||1\'b1)||c)'
expr_in = '(1\'b1&v)|(~u&(m|start)&t)'
ast = parser.parse(expr_in)
print('expr:\n', expr_in)
print('\nast:\n', ast)
