parser.out
Created by PLY (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> expression
Rule 1     expression -> expression MUL expression
Rule 2     expression -> expression DIV expression
Rule 3     expression -> expression ADD expression
Rule 4     expression -> expression SUB expression
Rule 5     expression -> expression OR expression
Rule 6     expression -> expression AND expression
Rule 7     expression -> expression BOR expression
Rule 8     expression -> expression BAND expression
Rule 9     expression -> expression EQ expression
Rule 10    expression -> expression NE expression
Rule 11    expression -> expression LT expression
Rule 12    expression -> expression GT expression
Rule 13    expression -> NOT expression
Rule 14    expression -> BNOT expression
Rule 15    expression -> LPAREN expression RPAREN
Rule 16    expression -> ID
Rule 17    expression -> const_expression
Rule 18    const_expression -> intnumber
Rule 19    intnumber -> INTNUM_BIN
Rule 20    intnumber -> INTNUM_OCT
Rule 21    intnumber -> INTNUM_DEC
Rule 22    intnumber -> INTNUM_HEX
Rule 23    intnumber -> SIGNED_INTNUM_BIN
Rule 24    intnumber -> SIGNED_INTNUM_OCT
Rule 25    intnumber -> SIGNED_INTNUM_DEC
Rule 26    intnumber -> SIGNED_INTNUM_HEX

Terminals, with rules where they appear

ADD                  : 3
AND                  : 6
BAND                 : 8
BNOT                 : 14
BOR                  : 7
DIV                  : 2
EQ                   : 9
GT                   : 12
ID                   : 16
INTNUM_BIN           : 19
INTNUM_DEC           : 21
INTNUM_HEX           : 22
INTNUM_OCT           : 20
LPAREN               : 15
LT                   : 11
MUL                  : 1
NE                   : 10
NOT                  : 13
OR                   : 5
RPAREN               : 15
SIGNED_INTNUM_BIN    : 23
SIGNED_INTNUM_DEC    : 25
SIGNED_INTNUM_HEX    : 26
SIGNED_INTNUM_OCT    : 24
SUB                  : 4
error                : 

Nonterminals, with rules where they appear

const_expression     : 17
expression           : 1 1 2 2 3 3 4 4 5 5 6 6 7 7 8 8 9 9 10 10 11 11 12 12 13 14 15 0
intnumber            : 18


state 0

    (0) S' -> . expression
    (1) expression -> . expression MUL expression
    (2) expression -> . expression DIV expression
    (3) expression -> . expression ADD expression
    (4) expression -> . expression SUB expression
    (5) expression -> . expression OR expression
    (6) expression -> . expression AND expression
    (7) expression -> . expression BOR expression
    (8) expression -> . expression BAND expression
    (9) expression -> . expression EQ expression
    (10) expression -> . expression NE expression
    (11) expression -> . expression LT expression
    (12) expression -> . expression GT expression
    (13) expression -> . NOT expression
    (14) expression -> . BNOT expression
    (15) expression -> . LPAREN expression RPAREN
    (16) expression -> . ID
    (17) expression -> . const_expression
    (18) const_expression -> . intnumber
    (19) intnumber -> . INTNUM_BIN
    (20) intnumber -> . INTNUM_OCT
    (21) intnumber -> . INTNUM_DEC
    (22) intnumber -> . INTNUM_HEX
    (23) intnumber -> . SIGNED_INTNUM_BIN
    (24) intnumber -> . SIGNED_INTNUM_OCT
    (25) intnumber -> . SIGNED_INTNUM_DEC
    (26) intnumber -> . SIGNED_INTNUM_HEX

    NOT             shift and go to state 2
    BNOT            shift and go to state 3
    LPAREN          shift and go to state 4
    ID              shift and go to state 5
    INTNUM_BIN      shift and go to state 8
    INTNUM_OCT      shift and go to state 9
    INTNUM_DEC      shift and go to state 10
    INTNUM_HEX      shift and go to state 11
    SIGNED_INTNUM_BIN shift and go to state 12
    SIGNED_INTNUM_OCT shift and go to state 13
    SIGNED_INTNUM_DEC shift and go to state 14
    SIGNED_INTNUM_HEX shift and go to state 15

    expression                     shift and go to state 1
    const_expression               shift and go to state 6
    intnumber                      shift and go to state 7

state 1

    (0) S' -> expression .
    (1) expression -> expression . MUL expression
    (2) expression -> expression . DIV expression
    (3) expression -> expression . ADD expression
    (4) expression -> expression . SUB expression
    (5) expression -> expression . OR expression
    (6) expression -> expression . AND expression
    (7) expression -> expression . BOR expression
    (8) expression -> expression . BAND expression
    (9) expression -> expression . EQ expression
    (10) expression -> expression . NE expression
    (11) expression -> expression . LT expression
    (12) expression -> expression . GT expression

    MUL             shift and go to state 16
    DIV             shift and go to state 17
    ADD             shift and go to state 18
    SUB             shift and go to state 19
    OR              shift and go to state 20
    AND             shift and go to state 21
    BOR             shift and go to state 22
    BAND            shift and go to state 23
    EQ              shift and go to state 24
    NE              shift and go to state 25
    LT              shift and go to state 26
    GT              shift and go to state 27


state 2

    (13) expression -> NOT . expression
    (1) expression -> . expression MUL expression
    (2) expression -> . expression DIV expression
    (3) expression -> . expression ADD expression
    (4) expression -> . expression SUB expression
    (5) expression -> . expression OR expression
    (6) expression -> . expression AND expression
    (7) expression -> . expression BOR expression
    (8) expression -> . expression BAND expression
    (9) expression -> . expression EQ expression
    (10) expression -> . expression NE expression
    (11) expression -> . expression LT expression
    (12) expression -> . expression GT expression
    (13) expression -> . NOT expression
    (14) expression -> . BNOT expression
    (15) expression -> . LPAREN expression RPAREN
    (16) expression -> . ID
    (17) expression -> . const_expression
    (18) const_expression -> . intnumber
    (19) intnumber -> . INTNUM_BIN
    (20) intnumber -> . INTNUM_OCT
    (21) intnumber -> . INTNUM_DEC
    (22) intnumber -> . INTNUM_HEX
    (23) intnumber -> . SIGNED_INTNUM_BIN
    (24) intnumber -> . SIGNED_INTNUM_OCT
    (25) intnumber -> . SIGNED_INTNUM_DEC
    (26) intnumber -> . SIGNED_INTNUM_HEX

    NOT             shift and go to state 2
    BNOT            shift and go to state 3
    LPAREN          shift and go to state 4
    ID              shift and go to state 5
    INTNUM_BIN      shift and go to state 8
    INTNUM_OCT      shift and go to state 9
    INTNUM_DEC      shift and go to state 10
    INTNUM_HEX      shift and go to state 11
    SIGNED_INTNUM_BIN shift and go to state 12
    SIGNED_INTNUM_OCT shift and go to state 13
    SIGNED_INTNUM_DEC shift and go to state 14
    SIGNED_INTNUM_HEX shift and go to state 15

    expression                     shift and go to state 28
    const_expression               shift and go to state 6
    intnumber                      shift and go to state 7

state 3

    (14) expression -> BNOT . expression
    (1) expression -> . expression MUL expression
    (2) expression -> . expression DIV expression
    (3) expression -> . expression ADD expression
    (4) expression -> . expression SUB expression
    (5) expression -> . expression OR expression
    (6) expression -> . expression AND expression
    (7) expression -> . expression BOR expression
    (8) expression -> . expression BAND expression
    (9) expression -> . expression EQ expression
    (10) expression -> . expression NE expression
    (11) expression -> . expression LT expression
    (12) expression -> . expression GT expression
    (13) expression -> . NOT expression
    (14) expression -> . BNOT expression
    (15) expression -> . LPAREN expression RPAREN
    (16) expression -> . ID
    (17) expression -> . const_expression
    (18) const_expression -> . intnumber
    (19) intnumber -> . INTNUM_BIN
    (20) intnumber -> . INTNUM_OCT
    (21) intnumber -> . INTNUM_DEC
    (22) intnumber -> . INTNUM_HEX
    (23) intnumber -> . SIGNED_INTNUM_BIN
    (24) intnumber -> . SIGNED_INTNUM_OCT
    (25) intnumber -> . SIGNED_INTNUM_DEC
    (26) intnumber -> . SIGNED_INTNUM_HEX

    NOT             shift and go to state 2
    BNOT            shift and go to state 3
    LPAREN          shift and go to state 4
    ID              shift and go to state 5
    INTNUM_BIN      shift and go to state 8
    INTNUM_OCT      shift and go to state 9
    INTNUM_DEC      shift and go to state 10
    INTNUM_HEX      shift and go to state 11
    SIGNED_INTNUM_BIN shift and go to state 12
    SIGNED_INTNUM_OCT shift and go to state 13
    SIGNED_INTNUM_DEC shift and go to state 14
    SIGNED_INTNUM_HEX shift and go to state 15

    expression                     shift and go to state 29
    const_expression               shift and go to state 6
    intnumber                      shift and go to state 7

state 4

    (15) expression -> LPAREN . expression RPAREN
    (1) expression -> . expression MUL expression
    (2) expression -> . expression DIV expression
    (3) expression -> . expression ADD expression
    (4) expression -> . expression SUB expression
    (5) expression -> . expression OR expression
    (6) expression -> . expression AND expression
    (7) expression -> . expression BOR expression
    (8) expression -> . expression BAND expression
    (9) expression -> . expression EQ expression
    (10) expression -> . expression NE expression
    (11) expression -> . expression LT expression
    (12) expression -> . expression GT expression
    (13) expression -> . NOT expression
    (14) expression -> . BNOT expression
    (15) expression -> . LPAREN expression RPAREN
    (16) expression -> . ID
    (17) expression -> . const_expression
    (18) const_expression -> . intnumber
    (19) intnumber -> . INTNUM_BIN
    (20) intnumber -> . INTNUM_OCT
    (21) intnumber -> . INTNUM_DEC
    (22) intnumber -> . INTNUM_HEX
    (23) intnumber -> . SIGNED_INTNUM_BIN
    (24) intnumber -> . SIGNED_INTNUM_OCT
    (25) intnumber -> . SIGNED_INTNUM_DEC
    (26) intnumber -> . SIGNED_INTNUM_HEX

    NOT             shift and go to state 2
    BNOT            shift and go to state 3
    LPAREN          shift and go to state 4
    ID              shift and go to state 5
    INTNUM_BIN      shift and go to state 8
    INTNUM_OCT      shift and go to state 9
    INTNUM_DEC      shift and go to state 10
    INTNUM_HEX      shift and go to state 11
    SIGNED_INTNUM_BIN shift and go to state 12
    SIGNED_INTNUM_OCT shift and go to state 13
    SIGNED_INTNUM_DEC shift and go to state 14
    SIGNED_INTNUM_HEX shift and go to state 15

    expression                     shift and go to state 30
    const_expression               shift and go to state 6
    intnumber                      shift and go to state 7

state 5

    (16) expression -> ID .

    MUL             reduce using rule 16 (expression -> ID .)
    DIV             reduce using rule 16 (expression -> ID .)
    ADD             reduce using rule 16 (expression -> ID .)
    SUB             reduce using rule 16 (expression -> ID .)
    OR              reduce using rule 16 (expression -> ID .)
    AND             reduce using rule 16 (expression -> ID .)
    BOR             reduce using rule 16 (expression -> ID .)
    BAND            reduce using rule 16 (expression -> ID .)
    EQ              reduce using rule 16 (expression -> ID .)
    NE              reduce using rule 16 (expression -> ID .)
    LT              reduce using rule 16 (expression -> ID .)
    GT              reduce using rule 16 (expression -> ID .)
    $end            reduce using rule 16 (expression -> ID .)
    RPAREN          reduce using rule 16 (expression -> ID .)


state 6

    (17) expression -> const_expression .

    MUL             reduce using rule 17 (expression -> const_expression .)
    DIV             reduce using rule 17 (expression -> const_expression .)
    ADD             reduce using rule 17 (expression -> const_expression .)
    SUB             reduce using rule 17 (expression -> const_expression .)
    OR              reduce using rule 17 (expression -> const_expression .)
    AND             reduce using rule 17 (expression -> const_expression .)
    BOR             reduce using rule 17 (expression -> const_expression .)
    BAND            reduce using rule 17 (expression -> const_expression .)
    EQ              reduce using rule 17 (expression -> const_expression .)
    NE              reduce using rule 17 (expression -> const_expression .)
    LT              reduce using rule 17 (expression -> const_expression .)
    GT              reduce using rule 17 (expression -> const_expression .)
    $end            reduce using rule 17 (expression -> const_expression .)
    RPAREN          reduce using rule 17 (expression -> const_expression .)


state 7

    (18) const_expression -> intnumber .

    MUL             reduce using rule 18 (const_expression -> intnumber .)
    DIV             reduce using rule 18 (const_expression -> intnumber .)
    ADD             reduce using rule 18 (const_expression -> intnumber .)
    SUB             reduce using rule 18 (const_expression -> intnumber .)
    OR              reduce using rule 18 (const_expression -> intnumber .)
    AND             reduce using rule 18 (const_expression -> intnumber .)
    BOR             reduce using rule 18 (const_expression -> intnumber .)
    BAND            reduce using rule 18 (const_expression -> intnumber .)
    EQ              reduce using rule 18 (const_expression -> intnumber .)
    NE              reduce using rule 18 (const_expression -> intnumber .)
    LT              reduce using rule 18 (const_expression -> intnumber .)
    GT              reduce using rule 18 (const_expression -> intnumber .)
    $end            reduce using rule 18 (const_expression -> intnumber .)
    RPAREN          reduce using rule 18 (const_expression -> intnumber .)


state 8

    (19) intnumber -> INTNUM_BIN .

    MUL             reduce using rule 19 (intnumber -> INTNUM_BIN .)
    DIV             reduce using rule 19 (intnumber -> INTNUM_BIN .)
    ADD             reduce using rule 19 (intnumber -> INTNUM_BIN .)
    SUB             reduce using rule 19 (intnumber -> INTNUM_BIN .)
    OR              reduce using rule 19 (intnumber -> INTNUM_BIN .)
    AND             reduce using rule 19 (intnumber -> INTNUM_BIN .)
    BOR             reduce using rule 19 (intnumber -> INTNUM_BIN .)
    BAND            reduce using rule 19 (intnumber -> INTNUM_BIN .)
    EQ              reduce using rule 19 (intnumber -> INTNUM_BIN .)
    NE              reduce using rule 19 (intnumber -> INTNUM_BIN .)
    LT              reduce using rule 19 (intnumber -> INTNUM_BIN .)
    GT              reduce using rule 19 (intnumber -> INTNUM_BIN .)
    $end            reduce using rule 19 (intnumber -> INTNUM_BIN .)
    RPAREN          reduce using rule 19 (intnumber -> INTNUM_BIN .)


state 9

    (20) intnumber -> INTNUM_OCT .

    MUL             reduce using rule 20 (intnumber -> INTNUM_OCT .)
    DIV             reduce using rule 20 (intnumber -> INTNUM_OCT .)
    ADD             reduce using rule 20 (intnumber -> INTNUM_OCT .)
    SUB             reduce using rule 20 (intnumber -> INTNUM_OCT .)
    OR              reduce using rule 20 (intnumber -> INTNUM_OCT .)
    AND             reduce using rule 20 (intnumber -> INTNUM_OCT .)
    BOR             reduce using rule 20 (intnumber -> INTNUM_OCT .)
    BAND            reduce using rule 20 (intnumber -> INTNUM_OCT .)
    EQ              reduce using rule 20 (intnumber -> INTNUM_OCT .)
    NE              reduce using rule 20 (intnumber -> INTNUM_OCT .)
    LT              reduce using rule 20 (intnumber -> INTNUM_OCT .)
    GT              reduce using rule 20 (intnumber -> INTNUM_OCT .)
    $end            reduce using rule 20 (intnumber -> INTNUM_OCT .)
    RPAREN          reduce using rule 20 (intnumber -> INTNUM_OCT .)


state 10

    (21) intnumber -> INTNUM_DEC .

    MUL             reduce using rule 21 (intnumber -> INTNUM_DEC .)
    DIV             reduce using rule 21 (intnumber -> INTNUM_DEC .)
    ADD             reduce using rule 21 (intnumber -> INTNUM_DEC .)
    SUB             reduce using rule 21 (intnumber -> INTNUM_DEC .)
    OR              reduce using rule 21 (intnumber -> INTNUM_DEC .)
    AND             reduce using rule 21 (intnumber -> INTNUM_DEC .)
    BOR             reduce using rule 21 (intnumber -> INTNUM_DEC .)
    BAND            reduce using rule 21 (intnumber -> INTNUM_DEC .)
    EQ              reduce using rule 21 (intnumber -> INTNUM_DEC .)
    NE              reduce using rule 21 (intnumber -> INTNUM_DEC .)
    LT              reduce using rule 21 (intnumber -> INTNUM_DEC .)
    GT              reduce using rule 21 (intnumber -> INTNUM_DEC .)
    $end            reduce using rule 21 (intnumber -> INTNUM_DEC .)
    RPAREN          reduce using rule 21 (intnumber -> INTNUM_DEC .)


state 11

    (22) intnumber -> INTNUM_HEX .

    MUL             reduce using rule 22 (intnumber -> INTNUM_HEX .)
    DIV             reduce using rule 22 (intnumber -> INTNUM_HEX .)
    ADD             reduce using rule 22 (intnumber -> INTNUM_HEX .)
    SUB             reduce using rule 22 (intnumber -> INTNUM_HEX .)
    OR              reduce using rule 22 (intnumber -> INTNUM_HEX .)
    AND             reduce using rule 22 (intnumber -> INTNUM_HEX .)
    BOR             reduce using rule 22 (intnumber -> INTNUM_HEX .)
    BAND            reduce using rule 22 (intnumber -> INTNUM_HEX .)
    EQ              reduce using rule 22 (intnumber -> INTNUM_HEX .)
    NE              reduce using rule 22 (intnumber -> INTNUM_HEX .)
    LT              reduce using rule 22 (intnumber -> INTNUM_HEX .)
    GT              reduce using rule 22 (intnumber -> INTNUM_HEX .)
    $end            reduce using rule 22 (intnumber -> INTNUM_HEX .)
    RPAREN          reduce using rule 22 (intnumber -> INTNUM_HEX .)


state 12

    (23) intnumber -> SIGNED_INTNUM_BIN .

    MUL             reduce using rule 23 (intnumber -> SIGNED_INTNUM_BIN .)
    DIV             reduce using rule 23 (intnumber -> SIGNED_INTNUM_BIN .)
    ADD             reduce using rule 23 (intnumber -> SIGNED_INTNUM_BIN .)
    SUB             reduce using rule 23 (intnumber -> SIGNED_INTNUM_BIN .)
    OR              reduce using rule 23 (intnumber -> SIGNED_INTNUM_BIN .)
    AND             reduce using rule 23 (intnumber -> SIGNED_INTNUM_BIN .)
    BOR             reduce using rule 23 (intnumber -> SIGNED_INTNUM_BIN .)
    BAND            reduce using rule 23 (intnumber -> SIGNED_INTNUM_BIN .)
    EQ              reduce using rule 23 (intnumber -> SIGNED_INTNUM_BIN .)
    NE              reduce using rule 23 (intnumber -> SIGNED_INTNUM_BIN .)
    LT              reduce using rule 23 (intnumber -> SIGNED_INTNUM_BIN .)
    GT              reduce using rule 23 (intnumber -> SIGNED_INTNUM_BIN .)
    $end            reduce using rule 23 (intnumber -> SIGNED_INTNUM_BIN .)
    RPAREN          reduce using rule 23 (intnumber -> SIGNED_INTNUM_BIN .)


state 13

    (24) intnumber -> SIGNED_INTNUM_OCT .

    MUL             reduce using rule 24 (intnumber -> SIGNED_INTNUM_OCT .)
    DIV             reduce using rule 24 (intnumber -> SIGNED_INTNUM_OCT .)
    ADD             reduce using rule 24 (intnumber -> SIGNED_INTNUM_OCT .)
    SUB             reduce using rule 24 (intnumber -> SIGNED_INTNUM_OCT .)
    OR              reduce using rule 24 (intnumber -> SIGNED_INTNUM_OCT .)
    AND             reduce using rule 24 (intnumber -> SIGNED_INTNUM_OCT .)
    BOR             reduce using rule 24 (intnumber -> SIGNED_INTNUM_OCT .)
    BAND            reduce using rule 24 (intnumber -> SIGNED_INTNUM_OCT .)
    EQ              reduce using rule 24 (intnumber -> SIGNED_INTNUM_OCT .)
    NE              reduce using rule 24 (intnumber -> SIGNED_INTNUM_OCT .)
    LT              reduce using rule 24 (intnumber -> SIGNED_INTNUM_OCT .)
    GT              reduce using rule 24 (intnumber -> SIGNED_INTNUM_OCT .)
    $end            reduce using rule 24 (intnumber -> SIGNED_INTNUM_OCT .)
    RPAREN          reduce using rule 24 (intnumber -> SIGNED_INTNUM_OCT .)


state 14

    (25) intnumber -> SIGNED_INTNUM_DEC .

    MUL             reduce using rule 25 (intnumber -> SIGNED_INTNUM_DEC .)
    DIV             reduce using rule 25 (intnumber -> SIGNED_INTNUM_DEC .)
    ADD             reduce using rule 25 (intnumber -> SIGNED_INTNUM_DEC .)
    SUB             reduce using rule 25 (intnumber -> SIGNED_INTNUM_DEC .)
    OR              reduce using rule 25 (intnumber -> SIGNED_INTNUM_DEC .)
    AND             reduce using rule 25 (intnumber -> SIGNED_INTNUM_DEC .)
    BOR             reduce using rule 25 (intnumber -> SIGNED_INTNUM_DEC .)
    BAND            reduce using rule 25 (intnumber -> SIGNED_INTNUM_DEC .)
    EQ              reduce using rule 25 (intnumber -> SIGNED_INTNUM_DEC .)
    NE              reduce using rule 25 (intnumber -> SIGNED_INTNUM_DEC .)
    LT              reduce using rule 25 (intnumber -> SIGNED_INTNUM_DEC .)
    GT              reduce using rule 25 (intnumber -> SIGNED_INTNUM_DEC .)
    $end            reduce using rule 25 (intnumber -> SIGNED_INTNUM_DEC .)
    RPAREN          reduce using rule 25 (intnumber -> SIGNED_INTNUM_DEC .)


state 15

    (26) intnumber -> SIGNED_INTNUM_HEX .

    MUL             reduce using rule 26 (intnumber -> SIGNED_INTNUM_HEX .)
    DIV             reduce using rule 26 (intnumber -> SIGNED_INTNUM_HEX .)
    ADD             reduce using rule 26 (intnumber -> SIGNED_INTNUM_HEX .)
    SUB             reduce using rule 26 (intnumber -> SIGNED_INTNUM_HEX .)
    OR              reduce using rule 26 (intnumber -> SIGNED_INTNUM_HEX .)
    AND             reduce using rule 26 (intnumber -> SIGNED_INTNUM_HEX .)
    BOR             reduce using rule 26 (intnumber -> SIGNED_INTNUM_HEX .)
    BAND            reduce using rule 26 (intnumber -> SIGNED_INTNUM_HEX .)
    EQ              reduce using rule 26 (intnumber -> SIGNED_INTNUM_HEX .)
    NE              reduce using rule 26 (intnumber -> SIGNED_INTNUM_HEX .)
    LT              reduce using rule 26 (intnumber -> SIGNED_INTNUM_HEX .)
    GT              reduce using rule 26 (intnumber -> SIGNED_INTNUM_HEX .)
    $end            reduce using rule 26 (intnumber -> SIGNED_INTNUM_HEX .)
    RPAREN          reduce using rule 26 (intnumber -> SIGNED_INTNUM_HEX .)


state 16

    (1) expression -> expression MUL . expression
    (1) expression -> . expression MUL expression
    (2) expression -> . expression DIV expression
    (3) expression -> . expression ADD expression
    (4) expression -> . expression SUB expression
    (5) expression -> . expression OR expression
    (6) expression -> . expression AND expression
    (7) expression -> . expression BOR expression
    (8) expression -> . expression BAND expression
    (9) expression -> . expression EQ expression
    (10) expression -> . expression NE expression
    (11) expression -> . expression LT expression
    (12) expression -> . expression GT expression
    (13) expression -> . NOT expression
    (14) expression -> . BNOT expression
    (15) expression -> . LPAREN expression RPAREN
    (16) expression -> . ID
    (17) expression -> . const_expression
    (18) const_expression -> . intnumber
    (19) intnumber -> . INTNUM_BIN
    (20) intnumber -> . INTNUM_OCT
    (21) intnumber -> . INTNUM_DEC
    (22) intnumber -> . INTNUM_HEX
    (23) intnumber -> . SIGNED_INTNUM_BIN
    (24) intnumber -> . SIGNED_INTNUM_OCT
    (25) intnumber -> . SIGNED_INTNUM_DEC
    (26) intnumber -> . SIGNED_INTNUM_HEX

    NOT             shift and go to state 2
    BNOT            shift and go to state 3
    LPAREN          shift and go to state 4
    ID              shift and go to state 5
    INTNUM_BIN      shift and go to state 8
    INTNUM_OCT      shift and go to state 9
    INTNUM_DEC      shift and go to state 10
    INTNUM_HEX      shift and go to state 11
    SIGNED_INTNUM_BIN shift and go to state 12
    SIGNED_INTNUM_OCT shift and go to state 13
    SIGNED_INTNUM_DEC shift and go to state 14
    SIGNED_INTNUM_HEX shift and go to state 15

    expression                     shift and go to state 31
    const_expression               shift and go to state 6
    intnumber                      shift and go to state 7

state 17
